libctl 1.4.1 (7/4/2001)

  * Support function lists.

libctl 1.4 (2/23/2001)

  * Renamed "display-many" function to more felicitous "print"
    and added "print-ok?" global variable that allows you
    to disable program output.

  * Added support for passing 'function types back and forth
    (just a SCM object pointing to a Scheme function).

  * Cosmetic fixes to yes/no? and menu-choice interaction functions.

  * Support start/exit hooks for use e.g. with MPI.

libctl 1.3 (1/7/2001)

  * Added improved "subplex" multidimensional optimization algorithm
    (for maximize-multiple and minimize-multiple).

  * Documented vector3-x, vector3-y, vector3-z functions for extracting
    vector3 components.

libctl 1.2 (7/9/2000)

  * Added new "cone" geometric object type.

  * Added reciprocal->cartesian, cartesian->lattice, lattice->reciprocal,
    etcetera functions to libgeom for converting vectors between bases.

  * Added routines rotate-vector3 and rotation-matrix3x3 for rotating vectors.

  * Added support for returning lists from external functions.

  * Fixed bug in matrix3x3-inverse function.

  * Fixed bug in find-root for converging to negative roots.

  * Use Nelder-Mead simplex algorithm for multi-dimensional minimization
    (it seems to be more robust than the old routine).

libctl 1.1.1 (1/28/2000)

  * Use CPPFLAGS environment variable instead of the less-standard
    INCLUDES to pass -I flags to the configure script (for header files
    in non-standard locations).

  * Compilation fixes.  We need to set SHELL in the Makefile for make on
    some systems.  Also added rule to insure ctl-io.h is created before
    main.c is compiled.  Thanks to Christoph Becher for the bug reports.

libctl 1.1 (1/2/2000)

  * geom: radius and height of objects is now permitted to be zero.

  * geom: material_of_point_* routines now report whether the point
    is in any object; necessary for use with MPB 0.9.
