@@ -1,3 +1,6 @@
+  * geometry-lattice now has a separate basis-size property, so that you
+    can specify the basis vectors as being something other than unit vectors.
+
 libctl 1.4.1 (7/4/2001)
 
   * Support function lists.
